feat: :sparkles: First strcture HTML add
Header and main structure add

--- a/index.html
+++ b/index.html
@@ -4,8 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="Header_Profile">
+            <img src="/Storage/img/ProfileImage.png" alt="">
+        </div>
+        <nav class="Header_Menu">
+            <li><a href="">Work</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Blog</a></li>
+        </nav>
+    </header>
+    <main>
+        <div class="Name">
+            <h2>Linus Kigai</h2>
+            <div class="Title">
+                <h1>Bringing Concept to Life</h1>
+                <div class="Description">
+                    <p>Lörem ipsum ditijybel beras fassade. Prel munira. Transperson bere då heterovalens. Kiling intraktig. Plasm ång refunde krobåling. </p>
+                </div>
+            </div>
+        </div>
+    <section class="Sponsors">
+        <div class="Images">
+            <img src="/Storage/img/Sponsor1.png" alt="">
+            <img src="/Storage/img/Sponsor2.png" alt="">
+            <img src="/Storage/img/Sponsor3.png" alt="">
+            <img src="/Storage/img/Sponsor4.png" alt="">
+            <img src="/Storage/img/Sponsor5.png" alt="">
+            <img src="/Storage/img/Sponsor6.png" alt="">
+        </div>
+
+    </section>    
+    </main>
+
 </body>
 </html>
